syntax = "proto3";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc StartJob (JobRequest) returns (JobReply) {}
    // Sends another greeting
    rpc StopJob (JobRequest) returns (JobReply) {}
    // List members
    rpc Members (JobRequest) returns (JobReply) {}
    // Join DDN 
    rpc Join (JobRequest) returns (JobReply) {}
    // Start
    rpc Start (JobRequest) returns (JobReply) {}
    // Stop
    rpc Stop (JobRequest) returns (JobReply) {}

  }
  
  // The request message containing the user's name.
  message JobRequest {
    string name = 1;
    repeated string addrs = 2;
  }

  
  // The response message containing the greetings
  message JobReply {
    string message = 1;
  }
